--- a/src/Discussion4/Index.html
+++ b/src/Discussion4/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SVG Animation</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
     <svg id="animation" viewBox="0 0 200 200" width="400" height="400">
