--- a/src/Discussion7/index.html
+++ b/src/Discussion7/index.html
@@ -5,11 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Delegation Example</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f7f7f7;
+        }
+        .container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            width: 90%;
+            max-width: 500px;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
         .task {
             cursor: pointer;
             padding: 10px;
             border: 1px solid #ccc;
             margin: 5px 0;
+            border-radius: 4px;
+            transition: background-color 0.3s;
         }
         .completed {
             background-color: #d4edda;
@@ -17,11 +40,14 @@
     </style>
 </head>
 <body>
-    <ul id="taskList">
-        <li class="task">Task 1</li>
-        <li class="task">Task 2</li>
-        <li class="task">Task 3</li>
-    </ul>
+    <div class="container">
+        <h1>To-Do List</h1>
+        <ul id="taskList">
+            <li class="task">Task 1</li>
+            <li class="task">Task 2</li>
+            <li class="task">Task 3</li>
+        </ul>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
