--- a/src/ITC505/lab-7/index.html
+++ b/src/ITC505/lab-7/index.html
@@ -19,7 +19,9 @@
         <input type="text" id="place" name="place" required><br>
         <label for="pluralNoun">Plural Noun:</label>
         <input type="text" id="pluralNoun" name="pluralNoun" required><br>
-        <button type="submit">Submit</button>
+        <a href="p.html">
+             <button type="submit">Submit</button>
+        </a>
     </form>
     <div id="result"></div>
     <footer>
